fix: buttons are overlapped when they are focused (#727)

--- a/web/src/connectors/documents-page-control-connector/documents-page-control-connector.module.scss
+++ b/web/src/connectors/documents-page-control-connector/documents-page-control-connector.module.scss
@@ -1,7 +1,3 @@
-.control-container {
-    padding-bottom: 12px;
-}
-
 .header-container {
     padding-bottom: 24px;
 }
