--- a/web/src/shared/components/table-wrapper/table-wrapper.module.scss
+++ b/web/src/shared/components/table-wrapper/table-wrapper.module.scss
@@ -19,7 +19,7 @@
 
 .container {
     overflow: auto;
-    padding-bottom: 36px;
+    padding-bottom: 48px;
     height: 100%;
     &>div {
         height: auto !important;
